k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice1
spec:
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
  selector:
    app: microservice1
