k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /microservice1
        backend:
          serviceName: microservice1
          servicePort: 8080
      - path: /microservice2
        backend:
          serviceName: microservice2
          servicePort: 8080
